still making better

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -44,7 +44,9 @@
                 <p> tempmin : {{tempmin}} </p>
                 <p> tempmax : {{tempmax}} </p>
                 <p> pressure : {{pressure}} </p>
-                <p> weather : {{weather}} - {{description}} </p>
+                <p> wind : {{wind}}</p>
+                <p> Humidity: {{humidity}}</p>
+                <p>Weather : <strong>{{weather}}</strong> - {{description}} </p>
               </li>
             </ul>
           </div>
